--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@
 }
 a {
   text-decoration: none;
+  color: #000;
 }
 
 .wrapper {
@@ -56,7 +57,7 @@ a {
   color: #464645;
   font-weight: 500;
   text-transform: uppercase;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 .account {
   font-size: 0.7rem;
@@ -101,10 +102,13 @@ a {
   padding: 0.6rem 3rem;
   font-size: 1rem;
   border: none;
-  background: linear-gradient(to right, #31ccb6, #29f19a);
+  background: #31ccb6;
   border-radius: 0.4rem;
   color: var(--f-color);
   cursor: pointer;
+}
+.discover:hover {
+  background: linear-gradient(to right, #31ccb6, #29f19a);
 }
 .mid-container {
   background: linear-gradient(to bottom, #c8c8ce, #fefefe);
@@ -119,6 +123,7 @@ a {
   flex: 1;
   background-color: #fefefe;
   border-radius: 1.5rem;
+  box-shadow: 0.5rem 0.5rem 1rem rgba(199, 199, 209, 0.6);
   margin: -2.5rem 1rem 0rem 1rem;
   display: flex;
   flex-direction: column;
@@ -150,12 +155,15 @@ a {
   height: 100%;
 }
 .btn1 {
-  padding: 0.5rem 2.5rem;
+  padding: 0.7rem 2.5rem;
   border: none;
-  background: linear-gradient(to right, #696be9, #69a2e3);
+  background: #696be9;
   font-size: 1rem;
   color: var(--f-color);
   border-radius: 0.4rem;
+}
+.btn1:hover {
+  background: linear-gradient(to right, #696be9, #69a2e3);
 }
 .btn2 {
   padding: 0.5rem 1.7rem;
@@ -191,6 +199,8 @@ a {
   color: var(--f-color);
   box-shadow: inset 5rem 4rem 3rem rgba(0, 0, 0, 0.6);
   border-radius: 1.5rem;
+  overflow: hidden;
+  margin-bottom: 3rem;
 }
 .helth-mate-content {
   width: 100%;
@@ -315,14 +325,18 @@ p {
   background: #efefef;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 2fr 1fr 1fr;
-  padding: 2rem;
+  grid-template-rows: 2fr 1fr;
+  padding-left: 2rem;
+  margin-top: 5rem;
+}
+.links-container ul {
   margin-top: 4rem;
 }
 .links-container li {
   list-style: none;
+  margin: 1rem 0rem;
 }
-.links-container ul :nth-child(1) {
+.links-container ul :nth-child(1) a {
   font-weight: bold;
 }
 .my-account {
@@ -364,8 +378,8 @@ p {
   align-items: space-between;
 }
 .flag {
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
   margin-top: 0.5rem;
 }
@@ -373,7 +387,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 1rem;
+  padding: 1.5rem;
 }
 .footer-links ul {
   display: flex;
