images size-changed

--- a/style/style.css
+++ b/style/style.css
@@ -336,7 +336,7 @@ p {
   list-style: none;
   margin: 1rem 0rem;
 }
-.links-container ul :nth-child(1) a {
+.links-container ul li:nth-child(1) {
   font-weight: bold;
 }
 .my-account {
