--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,8 @@ a {
 }
 .showcase-container {
   width: 100%;
-  height: 90vh;
+
+  min-height: 90vh;
 
   background: rgba(199, 199, 209, 0.6);
   z-index: 2;
@@ -420,4 +421,73 @@ p {
 }
 .footer-links ul :nth-child(6) {
   border-right: none;
+}
+
+/* media querys for 1024 screen width */
+@media only screen and (max-width: 1024px) {
+  .nav-links {
+    display: none;
+  }
+
+  .account {
+    display: none;
+  }
+  .nav-container {
+    background: #fff;
+  }
+  .logo {
+    text-align: center;
+  }
+  .showcase-main {
+    max-height: 50rem;
+  }
+  .second-last-container {
+    height: 55rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .btn-container {
+    display: flex;
+  }
+  .btn1 {
+    font-size: 1rem;
+  }
+  .second-last-container {
+    flex-direction: column;
+  }
+  .watches {
+    flex: 1;
+  }
+  .scale-monitor-container {
+    flex: 2;
+  }
+
+  .footer-links-container {
+    width: 50rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .box1 {
+    display: none;
+  }
+  .dropdown-links {
+    padding: 2rem;
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+  }
+  .dropdown-links .btn2 {
+    padding-left: 0rem;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer-container {
+    flex-direction: column;
+  }
+  .footer-links {
+    padding: 1.2rem;
+  }
 }
